--- a/s7/report/bibliographie.bib
+++ b/s7/report/bibliographie.bib
@@ -1,108 +1,211 @@
 @inproceedings{CousotCousot77-1,
-  author =    {Cousot, P{.} and Cousot, R{.}},
-  title =     {Abstract interpretation: a unified lattice model for static 
-              analysis of programs by construction or approximation of 
-              fixpoints},
-  pages =     {238--252},
-  booktitle = {Conference Record of the Fourth Annual ACM SIGPLAN-SIGACT 
-              Symposium on Principles of Programming Languages},
-  address =   {Los Angeles, California},
+  author    = {Cousot, P{.} and Cousot, R{.}},
+  title     = {Abstract interpretation: a unified lattice model for static analysis of programs by construction or approximation of fixpoints},
+  pages     = {238--252},
+  booktitle = {Conference Record of the Fourth Annual ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+  address   = {Los Angeles, California},
   publisher = {ACM Press, New York, NY},
-  year =      1977,
+  year      = 1977
 }
 
-@misc{Leroy_2024,
-  author = {Leroy, Malo},
-  month = jun,
-  title = {Abstract additive quantum decision diagrams},
-  howpublished = {\url{https://github.com/Firefnix/coto/}},
-  url = {https://github.com/Firefnix/coto/},
-  year = {2024}
+@misc{Leroy_2025,
+  author       = {Leroy, Malo},
+  month        = {2},
+  title        = {Abstract additive quantum decision diagrams},
+  url          = {https://github.com/Firefnix/coto/},
+  year         = {2025}
+}
+
+@misc{Leroy_doc,
+  author       = {Leroy, Malo},
+  month        = {2},
+  title        = {Coto Documentation},
+  url          = {https://firefnix.github.io/coto/},
+  year         = {2025}
 }
 
 @article{Bichsel_2023,
-  title={Abstraqt: Analysis of Quantum Circuits via Abstract Stabilizer Simulation},
-  volume={7},
-  ISSN={2521-327X},
-  url={http://dx.doi.org/10.22331/q-2023-11-20-1185},
-  DOI={10.22331/q-2023-11-20-1185},
-  journal={Quantum},
-  publisher={Verein zur Forderung des Open Access Publizierens in den Quantenwissenschaften},
-  author={Bichsel, Benjamin and Paradis, Anouk and Baader, Maximilian and Vechev, Martin},
-  year={2023},
-  month=nov, pages={1185}
+  title     = {Abstraqt: Analysis of Quantum Circuits via Abstract Stabilizer Simulation},
+  volume    = {7},
+  issn      = {2521-327X},
+  doi       = {10.22331/q-2023-11-20-1185},
+  journal   = {Quantum},
+  publisher = {Verein zur Forderung des Open Access Publizierens in den Quantenwissenschaften},
+  author    = {Bichsel, Benjamin and Paradis, Anouk and Baader, Maximilian and Vechev, Martin},
+  year      = {2023},
+  month     = nov,
+  pages     = {1185}
 }
 
 @misc{Chen_2023,
-  title={An Automata-based Framework for Verification and Bug Hunting in Quantum Circuits (Technical Report)},
-  author={Yu-Fang Chen and Kai-Min Chung and Ondřej Lengál and Jyun-Ao Lin and Wei-Lun Tsai and Di-De Yen},
-  year={2023},
-  eprint={2301.07747},
-  archivePrefix={arXiv},
-  primaryClass={cs.LO}
+  title         = {An Automata-based Framework for Verification and Bug Hunting in Quantum Circuits (Technical Report)},
+  author        = {Yu-Fang Chen and Kai-Min Chung and Ondřej Lengál and Jyun-Ao Lin and Wei-Lun Tsai and Di-De Yen},
+  year          = {2023},
+  eprint        = {2301.07747},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.LO}
 }
 
 @article{Vinkhuijzen_2023,
-  title={LIMDD: A Decision Diagram for Simulation of Quantum Computing Including Stabilizer States},
-  volume={7},
-  ISSN={2521-327X},
-  url={http://dx.doi.org/10.22331/q-2023-09-11-1108},
-  DOI={10.22331/q-2023-09-11-1108},
-  journal={Quantum},
-  publisher={Verein zur Forderung des Open Access Publizierens in den Quantenwissenschaften},
-  author={Vinkhuijzen, Lieuwe and Coopmans, Tim and Elkouss, David and Dunjko, Vedran and Laarman, Alfons},
-  year={2023},
-  month=sep, pages={1108}
+  title     = {LIMDD: A Decision Diagram for Simulation of Quantum Computing Including Stabilizer States},
+  volume    = {7},
+  issn      = {2521-327X},
+  doi       = {10.22331/q-2023-09-11-1108},
+  journal   = {Quantum},
+  publisher = {Verein zur Forderung des Open Access Publizierens in den Quantenwissenschaften},
+  author    = {Vinkhuijzen, Lieuwe and Coopmans, Tim and Elkouss, David and Dunjko, Vedran and Laarman, Alfons},
+  year      = {2023},
+  month     = sep,
+  pages     = {1108}
 }
 
 @book{Rosendahl_1995,
-  author = {Mads Rosendahl},
-  title = {Introduction to abstract interpretation},
-  publisher = {Computer Science University of Copenhagen},
+  author     = {Mads Rosendahl},
+  title      = {Introduction to abstract interpretation},
+  publisher  = {CS University of Copenhagen},
   pagestotal = {69},
-  year ={1995},
+  year       = {1995}
 }
 
 @book{Minato_1996,
-  series = {Kluwer international series in engineering and computer science. VLSI, computer architecture, and digital signal processing},
-  abstract = {Symbolic Boolean manipulation using binary decision diagrams (BDDs) has been successfully applied to a wide variety of tasks, particularly in very large scale integration (VLSI) computer-aided design (CAD). The concept of decision graphs as an abstract representation of Boolean functions dates back to the early work by Lee and Akers. In the last ten years, BDDs have found widespread use as a concrete data structure for symbolic Boolean manipulation. With BDDs, functions can be constructed, manipulated, and compared by simple and efficient graph algorithms. Since Boolean functions can represent not just digital circuit functions, but also such mathematical domains as sets and relations, a wide variety of CAD problems can be solved using BDDs. `Binary Decision Diagrams and Applications for VLSI CAD provides valuable information for both those who are new to BDDs as well as to long time aficionados.' -from the Foreword by Randal E. Bryant. `Over the past ten years ... BDDs have attracted the attention of many researchers because of their suitability for representing Boolean functions. They are now widely used in many practical VLSI CAD systems. ... this book can serve as an introduction to BDD techniques and ... it presents several new ideas on BDDs and their applications. ... many computer scientists and engineers will be interested in this book since Boolean function manipulation is a fundamental technique not only in digital system design but also in exploring various problems in computer science.' - from the Preface by Shin-ichi Minato.},
-  isbn = {1-4612-8558-5},
-  year = {1996},
-  pages          = {7--11},
-  publisher      = {Springer New York, NY},
-  title = {Binary decision diagrams and applications for VLSI CAD},
-  language = {eng},
-  author = {Minato, Shin-ichi},
-  keywords = {Computer-aided design; Integrated circuits -- Very large scale integration -- Design -- Data processing},
+  series    = {Kluwer international series in engineering and computer science. VLSI, computer architecture, and digital signal processing},
+  isbn      = {1-4612-8558-5},
+  year      = {1996},
+  pages     = {7--11},
+  publisher = {Springer New York, NY},
+  title     = {Binary decision diagrams and applications for VLSI CAD},
+  language  = {eng},
+  author    = {Minato, Shin-ichi},
+  keywords  = {Computer-aided design; Integrated circuits -- Very large scale integration -- Design -- Data processing}
 }
 
 @article{Rokne_1971,
-  author = {Rokne, J. and Lancaster, P.},
-  title = {Complex interval arithmetic},
-  year = {1971},
-  issue_date = {Feb. 1971},
-  publisher = {Association for Computing Machinery},
-  address = {New York, NY, USA},
-  volume = {14},
-  number = {2},
-  issn = {0001-0782},
-  url = {https://doi.org/10.1145/362515.362563},
-  doi = {10.1145/362515.362563},
-  abstract = {Complex interval arithmetic is defined using real interval arithmetic. Complex interval division is defined so as to assure smallest possible resulting intervals.},
-  journal = {Commun. ACM},
-  month = {feb},
-  pages = {111–112},
-  numpages = {2},
-  keywords = {real intervals, real interval arithmetic, complex intervals, complex interval arithmetic}
+  author     = {Rokne, J. and Lancaster, P.},
+  title      = {Complex interval arithmetic},
+  year       = {1971},
+  publisher  = {Association for Computing Machinery},
+  address    = {New York, NY, USA},
+  volume     = {14},
+  number     = {2},
+  issn       = {0001-0782},
+  doi        = {10.1145/362515.362563},
+  abstract   = {Complex interval arithmetic is defined using real interval arithmetic. Complex interval division is defined so as to assure smallest possible resulting intervals.},
+  journal    = {Commun. ACM},
+  month      = {2},
+  pages      = {111–112},
+  numpages   = {2},
+  keywords   = {real intervals, real interval arithmetic, complex intervals, complex interval arithmetic}
 }
 
 @article{Sunaga_2009,
-author = {Teruo Sunaga},
-title = {{Theory of an interval algebra and its application to numerical analysis [Reprint of Res. Assoc. Appl. Geom. Mem. 2 (1958), 29–46]}},
-volume = {26},
-journal = {Japan Journal of Industrial and Applied Mathematics},
-number = {2-3},
-publisher = {Japan Society for Industrial and Applied Mathematics},
-pages = {125 -- 143},
-year = {2009},
+  author    = {Teruo Sunaga},
+  title     = {{Theory of an interval algebra and its application to numerical analysis [Reprint of Res. Assoc. Appl. Geom. Mem. 2 (1958), 29–46]}},
+  volume    = {26},
+  journal   = {Japan Journal of Industrial and Applied Mathematics},
+  number    = {2-3},
+  publisher = {Japan Society for Industrial and Applied Mathematics},
+  pages     = {125 -- 143},
+  year      = {2009}
+}
+
+@article{DJ_1992,
+  author  = {Deutsch, D. and Jozsa, R.},
+  title   = {Rapid solution of problems by quantum computation},
+  journal = {Proceedings of the Royal Society of London. Series A: Mathematical and Physical Sciences},
+  year    = {1992},
+  volume  = {439},
+  issue   = {1907},
+  pages   = {553-558},
+  doi     = {10.1098/rspa.1992.0167}
+}
+
+@misc{Grover_1996,
+  title         = {A fast quantum mechanical algorithm for database search},
+  author        = {Lov K. Grover},
+  year          = {1996},
+  eprint        = {quant-ph/9605043},
+  archiveprefix = {arXiv},
+  primaryclass  = {quant-ph},
+}
+
+@article{Shor_1997,
+  title     = {Polynomial-Time Algorithms for Prime Factorization and Discrete Logarithms on a Quantum Computer},
+  volume    = {26},
+  issn      = {1095-7111},
+  doi       = {10.1137/s0097539795293172},
+  number    = {5},
+  journal   = {SIAM Journal on Computing},
+  publisher = {Society for Industrial & Applied Mathematics (SIAM)},
+  author    = {Shor, Peter W.},
+  year      = {1997},
+  month     = oct,
+  pages     = {1484–1509}
+}
+
+@misc{QASM_2017,
+  title         = {Open Quantum Assembly Language},
+  author        = {Andrew W. Cross and Lev S. Bishop and John A. Smolin and Jay M. Gambetta},
+  year          = {2017},
+  eprint        = {1707.03429},
+  archiveprefix = {arXiv},
+  primaryclass  = {quant-ph},
+}
+
+@misc{QTranslator,
+  author       = {Martin Olivier, Jean-Baptiste Debize and Théo Fourcat},
+  month        = jun,
+  title        = {QTranslator -- Assembly to quantum assembly},
+  url          = {https://github.com/PoCInnovation/QTranslator},
+  year         = {2022}
+}
+
+
+@misc{GoogleTest,
+  author       = {Google},
+  month        = feb,
+  title        = {Google Test v1.16.0},
+  url          = {https://google.github.io/googletest/},
+  year         = {2025}
+}
+
+@misc{Git,
+  author       = {Git},
+  title        = {Git v2.47.1},
+  url          = {https://git-scm.com/},
+  year         = {2005-2025}
+}
+
+@misc{GitHub,
+  author       = {GitHub},
+  title        = {GitHub},
+  url          = {https://github.com/},
+  year         = {2008-2025}
+}
+
+@misc{CMake,
+  author       = {Kitware},
+  title        = {CMake v3.31.5},
+  url          = {https://gitlab.kitware.com/cmake/cmake},
+  year         = {2000-2025}
+}
+
+@misc{Clang,
+  author       = {Apple Inc.},
+  title        = {Clang v19.1.7},
+  url          = {https://clang.llvm.org/},
+  year         = {2007-2025}
+}
+
+@misc{Ninja,
+  author       = {Evan Martin},
+  title        = {Ninja v1.12.1},
+  url          = {https://ninja-build.org/},
+  year         = {2012-2024}
+}
+
+@misc{Doxygen,
+  author       = {Dimitri van Heesch, Doxygen},
+  title        = {Doxygen v1.13.2},
+  url          = {https://www.doxygen.nl},
+  year         = {1997-2024}
 }
