--- a/s7/report/Conclusion.tex
+++ b/s7/report/Conclusion.tex
@@ -8,10 +8,16 @@ Le modèle qui a été développé, avec algorithme de réduction, permet de lim
 
 L'implémentation, n'a pas encore fourni de résultats expérimentaux significatifs, mais permet déjà de simuler des diagrammes de décision quantiques de manière performante. Sa robustesse est assurée par des tests unitaires.
 
-Le travail réalisé sur cette période est donc encourageant : malgré des difficultés rencontrées, tant d'un point de vue technique en programmation que dans la définition du modèle, ayant parfois amené à revenir en arrière avant de trouver une bonne définition de l'erreur par exemple, les résultats théoriques obtenus sont prometteurs.
+Au cours de ce semestre, des efforts sur l'implémentation ont été réalisés, entre autres afin de rendre interchangables les intervalles complexes cartésiens et polaires mais aussi plus généralement pour améliorer la qualité et réusabilité du code. La documentation du code a été améliorée, et le document principal détaillant les aspects théoriques du projet a été complété.
+
+Un interpréteur QASM a été réalisé au cours de ce semestre, se reposant sur des travaux théoriques ayant permis une implémentation de l'application de portes à des diagrammes.
+
+Le travail réalisé sur cette période est donc prometteur, et s'incrit dans la continuité du travail réalisé au semestre dernier : malgré des difficultés rencontrées, tant d'un point de vue technique en programmation que dans la définition du modèle, ayant parfois amené à revenir en arrière avant de trouver une bonne définition de l'erreur par exemple, les résultats théoriques obtenus sont prometteurs.
 
 \section{Perspectives}
 
-Plusieurs perspectives peuvent être envisagées pour prolonger les travaux réalisés. D'une part, puisque plusieurs choix dans la définition du modèle ont étés faits de manière arbitraire parmi plusieurs options possibles (fonction d'erreur notamment), il est pertinent de réaliser de nombreuses simulations dans des configurations différentes afin de déterminer les choix les plus pertinents.
+Plusieurs perspectives peuvent être envisagées pour prolonger les travaux réalisés. D'une part, puisque plusieurs choix dans la définition du modèle ont étés faits de manière arbitraire parmi plusieurs options possibles, il est pertinent de réaliser de nombreuses simulations dans des configurations différentes afin de déterminer les choix les plus pertinents.
 
-Nous pourrons aussi étendre le modèle avec d'autres concepts, comme les automates d'arbres pour la \textbf{vérification} \cite{Chen_2023} ou les diagrammes de décisions et applications localement inversibles \cite{Vinkhuijzen_2023}. Enfin, l'implémentation aurait à gagner d'être plus facile d'utilisation, par exemple avec une \textbf{interface graphique} et un \textbf{lecteur QASM} (équivalent quantique du format assembleur en informatique classique). Ces axes de travail pourront être explorés au premier semestre de la deuxième année du cursus CentraleSupélec si le projet est prolongé.
+On pourra notamment réaliser des tests de performance sur plusieurs fonctions d'erreur, ou observer l'effet d'échanges de qubits sur les performances en termes de manque de précision. De manière générale, il manque des \textbf{résultats expérimentaux} et en particulier des comparaisons à d'autres implémentations de la littérature sur des exemples usuels.
+
+Nous pourrons aussi étendre le modèle avec d'autres concepts, comme les automates d'arbres pour la \textbf{vérification} ou les diagrammes de décisions et applications localement inversibles. \cite{Chen_2023} \cite{Vinkhuijzen_2023} Enfin, l'implémentation aurait à gagner d'être plus facile d'utilisation, par exemple avec une \textbf{interface graphique} pouvant agrémenter l'interpréteur QASM. Ces axes de travail pourront être explorés au cours de la suite du projet s'il est prolongé.
