🚨 Fix year BibTeX warnings

--- a/s7/report/bibliographie.bib
+++ b/s7/report/bibliographie.bib
@@ -159,7 +159,6 @@
   year         = {2022}
 }
 
-
 @misc{GoogleTest,
   author       = {Google},
   month        = feb,
@@ -172,40 +171,40 @@
   author       = {Git},
   title        = {Git v2.47.1},
   url          = {https://git-scm.com/},
-  year         = {2005-2025}
+  date         = {2005/2025}
 }
 
 @misc{GitHub,
   author       = {GitHub},
   title        = {GitHub},
   url          = {https://github.com/},
-  year         = {2008-2025}
+  date         = {2008/2025}
 }
 
 @misc{CMake,
   author       = {Kitware},
   title        = {CMake v3.31.5},
   url          = {https://gitlab.kitware.com/cmake/cmake},
-  year         = {2000-2025}
+  date         = {2000/2025}
 }
 
 @misc{Clang,
   author       = {Apple Inc.},
   title        = {Clang v19.1.7},
   url          = {https://clang.llvm.org/},
-  year         = {2007-2025}
+  date         = {2007/2025}
 }
 
 @misc{Ninja,
   author       = {Evan Martin},
   title        = {Ninja v1.12.1},
   url          = {https://ninja-build.org/},
-  year         = {2012-2024}
+  date         = {2012/2024}
 }
 
 @misc{Doxygen,
   author       = {Dimitri van Heesch, Doxygen},
   title        = {Doxygen v1.13.2},
   url          = {https://www.doxygen.nl},
-  year         = {1997-2024}
+  date         = {1997/2024}
 }
